--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "pm2": "^6.0.14"
   }
 }
