--- a/.github/workflows/contest-cron.yml
+++ b/.github/workflows/contest-cron.yml
@@ -2,7 +2,7 @@ name: Trigger Vercel Cron
 
 on:
   schedule:
-    - cron: '* * * * *' # Runs every minute
+    - cron: '0 * * * *' # Runs every minute
   workflow_dispatch: # Allows you to click "Run workflow" manually to test
 
 jobs:
