--- a/.github/workflows/contest-cron.yml
+++ b/.github/workflows/contest-cron.yml
@@ -1,9 +1,11 @@
+
 name: Trigger Vercel Cron
 
 on:
   schedule:
-    - cron: '0 * * * *' # Runs every minute
-  workflow_dispatch: # Allows you to click "Run workflow" manually to test
+    # Minute (0) Hour (6) DayOfMonth (*) Month (*) DayOfWeek (*)
+    - cron: '30 0 * * *' 
+  workflow_dispatch:
 
 jobs:
   ping-vercel:
